[gd_scene load_steps=2 format=3 uid="uid://dr7pgcagqkatr"]

[ext_resource type="Script" path="res://source/actors/player/random_sound.gd" id="1_lm56a"]

[node name="random_sound" type="Node3D"]
script = ExtResource("1_lm56a")

[node name="sound_player" type="AudioStreamPlayer3D" parent="."]
top_level = true
unit_size = 15.0

[node name="sound_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="sound_timer" to="." method="_on_sound_timer_timeout"]
